# No [lints] table on purpose: the harness panics by design (budget
# exhaustion turns would-be hangs into failures), which the workspace
# restriction lints forbid.

[package]
name = "nectar-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Deterministic async test harness and shared fixtures for the nectar workspace"
publish = false

[dependencies]
allocation-counter = { workspace = true, optional = true }
futures-executor.workspace = true
nectar-file = { workspace = true, optional = true }
nectar-postage = { workspace = true, optional = true }
nectar-primitives = { workspace = true, optional = true }

[features]
# Allocation witness. Linking it swaps the global allocator of every target
# in the enabling crate, so enable it per probe crate, never by default.
alloc = [ "dep:allocation-counter" ]

# Shared split fixtures and SwarmSpec doubles. Encrypted-mode splits ride the
# mode-generic `split_into`; callers bring their own encryption features.
fixtures = [ "dep:nectar-file", "dep:nectar-postage", "dep:nectar-primitives" ]

# The wasm smoke test is the executable proof that a !Send store satisfies the
# chunk traits on wasm32; the same store cannot compile on native targets.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures.workspace = true
nectar-file.workspace = true
nectar-primitives.workspace = true
wasm-bindgen-test.workspace = true
