[package]
name = "nectar-wasm-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM demo for parallel BMT hashing and chunk generation"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nectar-primitives = { workspace = true }
nectar-postage = { workspace = true, features = ["std"] }
nectar-postage-issuer = { workspace = true, features = ["std", "local-signer"] }
alloy-primitives = { workspace = true, features = ["getrandom"] }
alloy-signer.workspace = true
alloy-signer-local.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-rayon.workspace = true
js-sys.workspace = true
getrandom.workspace = true
getrandom_02.workspace = true
rayon.workspace = true
console_error_panic_hook.workspace = true

# For console logging in WASM
web-sys = { version = "0.3", features = [
    "console",
    "Performance",
    "Window",
] }

# Serialization for transferring between workers
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
