# nectar/crates/primitives/examples/wasm-demo/Cargo.toml
[package]
name = "bmt-wasm-demo"
version = "0.1.0"
edition = "2021"
description = "WASM demo for BMT hasher"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytes.workspace = true
nectar-primitives.workspace = true
digest.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook = { version = "0.1.7", optional = true }
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
getrandom = { version = "0.2.12", features = ["js"] }

# Configure WASM output optimization
[profile.release]
opt-level = "s"
lto = true
